--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     <div class="container">
         <h1>Welcome to dotstake.xyz</h1>
         <p>Secure, reliable, and fun staking pool and validator powered by Polkadot.</p>
+        <p>More coming soon...</p>
     </div>
     <img src="dotstake_robot.png" alt="Background Robot" class="background-robot">
     <footer>
