--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to dotstake.xyz</h1>
+        <h1>Welcome to PolkaBot</h1>
         <p>Secure, reliable, and fun staking pool and validator powered by Polkadot.</p>
         <p>More coming soon...</p>
     </div>
     <img src="dotstake_robot.png" alt="Background Robot" class="background-robot">
     <footer>
-        &copy; 2024 DotStake. All rights reserved.
+        &copy; 2024 PolkaBot. All rights reserved.
     </footer>
 </body>
 </html>
