--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 <body>
     <div class="container">
         <h1>Welcome to PolkaBot</h1>
-        <p>Secure, reliable, and fun staking pool and validator powered by Polkadot.</p>
+        <p>Secure, reliable, and fun validator and pool powered by Polkadot.</p>
+        <p>Contact us at support@polkabot.xyz</p>
         <p>More coming soon...</p>
     </div>
     <img src="dotstake_robot.png" alt="Background Robot" class="background-robot">
