--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <body>
     <div class="container">
         <h1>Welcome to PolkaBot</h1>
-        <p>Secure, reliable, and fun validator and pool powered by Polkadot.</p>
+        <p>Secure, reliable, and fun Validator powered by Polkadot.</p>
         <p>Contact us at support@polkabot.xyz</p>
         <p>More coming soon...</p>
     </div>
