--- a/index.html
+++ b/index.html
@@ -65,25 +65,20 @@
         }
 
         .background-robot {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            width: 200px;
+            height: 200px;
             object-fit: fill;
-            opacity: 0.2; /* Less faded */
-            z-index: 0;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Welcome to PolkaBot</h1>
+        <img src="polkabot.png" alt="Background Robot" class="background-robot">
         <p>Secure, reliable, and fun Validator powered by Polkadot.</p>
         <p>Contact us at support@polkabot.xyz</p>
         <p>More coming soon...</p>
     </div>
-    <img src="dotstake_robot.png" alt="Background Robot" class="background-robot">
     <footer>
         &copy; 2024 PolkaBot. All rights reserved.
     </footer>
