--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="dotstake_robot.png" type="image/png">
+    <link rel="icon" href="polkabot.png" type="image/png">
     <title>Welcome to Polkadot Staking</title>
     <style>
         body {
