--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <div class="container">
         <div class="content-box">
             <h1>Welcome to DotPool</h1>
-            <p>Polkadot pools are secure and trustless, ensuring your staked DOTs are always safe. However, some pools may charge high commissions—up to 100%—taking all your rewards.</p>
+            <p>Polkadot pools are secure and trustless, ensuring your staked DOTs are always safe. However, some pools may charge high commissions—up to 10%—taking substantial rewards.</p>
             <p>At DotPool, we believe staking rewards belong to you. That’s why we charge <strong>0% commission</strong>, forever.</p>
             <p>Our pool’s commission is permanently locked at 0%, ensuring your rewards are always maximized with complete transparency.</p>
             <p>Contact us: <a href="mailto:support@dotpool.io">support@dotpool.io</a></p>
