--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="polkabot.png" type="image/png">
-    <title>Welcome to DotPool</title>
+    <title>Welcome to dotpool.io</title>
     <style>
         /* Reset and Base Styling */
         * {
@@ -18,7 +18,7 @@
             background: linear-gradient(135deg, #f9f9f9, #eef2f3);
             color: #333;
             text-align: center;
-            overflow: hidden;
+            overflow-x: hidden;
             line-height: 1.6;
         }
 
@@ -60,6 +60,7 @@
             font-weight: bold;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             margin-top: 20px;
+            cursor: pointer;
         }
 
         .cta-button:hover {
@@ -100,22 +101,66 @@
             padding: 30px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
         }
+
+        /* Guide Section Styling */
+        #guide {
+            padding: 50px 20px;
+            background-color: #f7f7f7;
+            border-top: 2px solid #007bff;
+            margin-top: 30px;
+        }
+
+        #guide h2 {
+            font-size: 2.5rem;
+            color: #007bff;
+            margin-bottom: 20px;
+        }
+
+        #guide p {
+            font-size: 1rem;
+            color: #555;
+            margin-bottom: 15px;
+            max-width: 700px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        #guide a {
+            color: #007bff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        #guide a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="content-box">
-            <h1>Welcome to DotPool</h1>
-            <p>Polkadot pools are secure and trustless, ensuring your staked DOTs are always safe. However, some pools may charge high commissions—up to 10%—taking substantial rewards.</p>
-            <p>At DotPool, we believe staking rewards belong to you. That’s why we charge <strong>0% commission</strong>, forever.</p>
+            <h1>Welcome to dotpool.io</h1>
+            <p>Polkadot pools are secure and trustless, ensuring your staked DOTs are always safe. However, some pools may charge high commissions—up to 100%—taking all your rewards.</p>
+            <p>At dotpool.io, we believe staking rewards belong to you. That’s why we charge <strong>0% commission</strong>, forever.</p>
             <p>Our pool’s commission is permanently locked at 0%, ensuring your rewards are always maximized with complete transparency.</p>
             <p>Contact us: <a href="mailto:support@dotpool.io">support@dotpool.io</a></p>
-            <a href="#contact" class="cta-button">Join DotPool</a>
+            <a href="#guide" class="cta-button">Join dotpool.io</a>
             <img src="polkabot.png" alt="PolkaBot" class="background-robot">
         </div>
     </div>
+    <div id="guide">
+        <h2>How to Join dotpool.io (#299)</h2>
+        <p>Joining our pool is quick and easy. Follow these simple steps to stake your DOTs with dotpool.io:</p>
+        <ol style="text-align: left; max-width: 700px; margin: 0 auto;">
+            <li>Visit the <a href="https://staking.polkadot.cloud/#/pools" target="_blank">Polkadot Staking Dashboard</a>.</li>
+            <li>Log in with your Polkadot wallet and navigate to the "All Pools" section.</li>
+            <li>Search for our pool by its name <strong>dotpool.io</strong> or its ID: <strong>#299</strong>.</li>
+            <li>Select our pool and follow the prompts to stake your DOTs securely.</li>
+        </ol>
+        <p>Once completed, your staking rewards will start accruing, and you’ll enjoy 0% commission, forever!</p>
+    </div>
     <footer>
-        &copy; 2024 DotPool. All rights reserved.
+        &copy; 2024 dotpool.io. All rights reserved.
     </footer>
 </body>
 </html>
