--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="polkabot.png" type="image/png">
+    <!-- Updated Favicon -->
+    <link rel="icon" href="dotpool.png" type="image/png">
     <title>Welcome to dotpool.io</title>
     <style>
         /* Reset and Base Styling */
@@ -50,6 +51,11 @@
             display: flex;
             align-items: center;
             margin-right: auto;
+        }
+
+        .logo img {
+            height: 40px;
+            margin-right: 10px;
         }
 
         .logo a {
@@ -154,6 +160,10 @@
                 margin-bottom: 10px;
             }
 
+            .logo img {
+                height: 30px;
+            }
+
             .logo a {
                 font-size: 1.5rem;
             }
@@ -178,6 +188,9 @@
     <nav>
         <ul>
             <li class="logo">
+                <!-- Logo Image -->
+                <img src="dotpool.png" alt="dotpool.io logo">
+                <!-- Textual Logo -->
                 <a href="#top">dotpool.io</a>
             </li>
             <li><a href="#guide">Guide</a></li>
