--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <div class="content-box">
             <h1>Welcome to dotpool.io</h1>
             <p>Polkadot pools are secure and trustless, ensuring your staked DOTs are always safe. However, some pools may charge high commissions—up to 10%—taking significant rewards.</p>
-            <p>Some pools may initially take low percentage but increase them without notice.</p>
+            <p>Additionally, some pools may initially offer low commissions but later increase them without notice.</p>
             <p>At dotpool.io, we believe staking rewards belong to you. That’s why we charge <strong>0% commission</strong>, forever.</p>
             <p>Our pool’s commission is permanently locked at 0%, ensuring your rewards are always maximized with complete transparency.</p>
             <p>Contact us: <a href="mailto:support@dotpool.io">support@dotpool.io</a></p>
