--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     <div id="top" class="container">
         <div class="content-box">
             <h1>Welcome to dotpool.io</h1>
-            <p>Polkadot pools are secure and trustless, ensuring your staked DOTs are always safe. However, some pools may charge high commissions—up to 10%—taking significant rewards.</p>
+            <p>Polkadot pools are secure and trustless, ensuring your staked DOTs are always safe. However, some pools may charge high commissions—up to 10%—which can significantly reduce your rewards.</p>
             <p>Additionally, some pools may initially offer low commissions but later increase them without notice.</p>
             <p>At dotpool.io, we believe staking rewards belong to you. That’s why we charge <strong>0% commission</strong>, forever.</p>
             <p>Our pool’s commission is permanently locked at 0%, ensuring your rewards are always maximized with complete transparency.</p>
