--- a/index.html
+++ b/index.html
@@ -235,13 +235,16 @@
 
     <div id="top" class="container">
         <div class="content-box">
-            <h1>Welcome to dotpool.io</h1>
-            <p>Polkadot pools are secure and trustless, ensuring your staked DOTs are always safe. However, some pools may charge high commissions—up to 10%—which can significantly reduce your rewards.</p>
-            <p>Additionally, some pools may initially offer low commissions but later increase them without notice.</p>
-            <p>At dotpool.io, we believe staking rewards belong to you. That’s why we charge <strong>0% commission</strong>, forever.</p>
-            <p>Our pool’s commission is permanently locked at 0%, ensuring your rewards are always maximized with complete transparency.</p>
-            <p>Contact us: <a href="mailto:support@dotpool.io">support@dotpool.io</a></p>
-            <a href="#guide" class="cta-button">Join dotpool.io</a>
+            <h1>Welcome to <span style="color: #007bff;">dotpool.io</span></h1>
+            <p>Polkadot pools are <strong>secure</strong> and <strong>trustless</strong>, offering up to <span style="color: #28a745;"><strong>16% Annual Percentage Yield (APY)</strong></span> while ensuring your staked DOTs remain safe.</p>
+            <p>However, many pools charge high commissions—some as much as <strong>10%</strong>—which can significantly reduce your rewards.</p>
+            <p>Others may lure you in with low commissions, only to increase them later without notice or redirect your stake to costly validators.</p>
+            <p style="margin-top: 30px; font-size: 1.5rem; color: #ff5722; font-weight: bold; text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);">
+                <span style="font-size: 2rem;">0%</span> Commission, Forever.
+            </p>
+            <p style="margin-top: 15px;">At <span style="color: #007bff; font-weight: bold;">dotpool.io</span>, we believe your staking rewards belong <strong>entirely to you</strong>. That's why our commission rate is permanently locked at <strong>0%</strong>, ensuring you always maximize your rewards with full transparency.</p>
+            <p style="margin-top: 20px; font-weight: bold; font-size: 1.1rem;">Contact us: <a href="mailto:support@dotpool.io">support@dotpool.io</a></p>
+            <a href="#guide" class="cta-button">Join dotpool.io Now</a>
         </div>
     </div>
 
